# snakey-monitoring

./: README.md  setup.cfg
snakey_monitoring/: __main__.py
snakey_monitoring/alert_actions/: discord_alert_action.py  log_alert_action.py
snakey_monitoring/alert_processors/: default_alert_processor.py  idle_alert_processor.py
snakey_monitoring/conditions/: always_condition.py  regex_condition.py
snakey_monitoring/discord/: discord_client.py
snakey_monitoring/http_monitor/: http_health_checks.py
snakey_monitoring/line_processor/: alerting_line_processor.py  logging_line_processor.py
snakey_monitoring/log_monitor/: file_monitor.py
snakey_monitoring/resources/: logging-config.json
