[metadata]
name = snakey_monitoring
version = attr:snakey_monitoring.__VERSION__
description = A process for monitoring the logs of Satisfactory, the status of SyncLounge, and other systems used by the tunnel snakes.
long_description = file: README.md
keywords = Tunnel Snakes Rule
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[options]
entry_points = snakey_monitoring
packages = snakey_monitoring
install_requires =
    discord.py ~= 1.6.0